Analysis of Customer Shopping Data{Source: Kaggle}

--- a/CustomerSales/customer_shopping.ipynb
+++ b/CustomerSales/customer_shopping.ipynb
@@ -22,7 +22,8 @@
    "metadata": {},
    "source": [
     "I analyse the distriution of a population by performing an EDA analysis on the dataset obtained from Kaggle. The aim of the analysis is to obtain the market share of the malls located across the locality and their target audience.\n",
-    "Customer details have also been collected for analysis so as to identify the age group that should be highly targeted during advertisements. In the analysis the mode of payment mostly preffered by the target customers was also identified, this data would be used to equip the malls with the necessary equipments to handle the payment methods. Data on the "
+    "Customer details have also been collected for analysis so as to identify the age group that should be highly targeted during advertisements. In the analysis the mode of payment mostly preffered by the target customers was also identified, this data would be used to equip the malls with the necessary equipments to handle the payment methods.\n",
+    "The analysis also aims at identifying the most popular categories for the sample population taken so as to provide information about the likes and needs of the population in terms of market distribution"
    ]
   },
   {
